# Customer-MCP-MongoDB

./: .env.example  .gitignore  README.md  claude_desktop_config.json  pyproject.toml
scripts/: setup_demo_data.py
src/product_mcp/: __init__.py  prompts.py  remote_server.py  server.py
src/product_mcp/core/: __init__.py  config.py  database.py  models.py
src/product_mcp/queries/: __init__.py  analytics.py  inventory.py  reports.py
src/product_mcp/tools/: __init__.py  analytics_tools.py  inventory_tools.py  product_tools.py
